--- a/cmake/readout-config.in
+++ b/cmake/readout-config.in
@@ -3,46 +3,42 @@
 import sys
 
 pyversion = sys.version_info[0:3]
-_minpyversion = (3, 6, 0)
+MIN_PY_VERSION = (3, 6, 0)
 if pyversion < (3, 0, 0):
     raise SystemExit('readout-config does not support Python2.')
-if pyversion < _minpyversion:
-    raise SystemExit('ERROR: Unsupported python version %i.%i.%i detected (needs %i.%i.%i or later).'% (pyversion+_minpyversion))
+if pyversion < MIN_PY_VERSION:
+    raise SystemExit(f'ERROR: Unsupported python version {pyversion} detected (needs {MIN_PY_VERSION} or later).')
 
 import pathlib
 import argparse
-import os
 import shlex
-import shutil
 
 #fs-path aware quote:
 shell_quote = lambda s: shlex.quote(str(s) if hasattr(s, '__fspath__') else s)
 
-cmakebool = lambda s: bool(s.lower() in ['1', 'on', 'yes', 'y', 'true'] or (s.isdigit() and int(s) > 1))
 
 # Information filled out by CMake (todo: put all logic below on cmake-side?):
-installation_info = dict(libdir='@Readout_BIN2LIB@',
-                         includedir='@Readout_BIN2INC@',
-                         compdir='@Readout_BIN2DATA@',
-                         libname='@Readout_LIBNAME@',
-                         version='@Readout_VERSION@',
-                         bindir='.',  # by definition, since readout-config is always installed in this directory
-                         ldflags='-Wl,-rpath,<LIBDIR> -L<LIBDIR> -l@Readout_LIBNAME@'.strip(),  # expand LIBDIR dynamically below
-                         cflags='-I<INCLUDEDIR>',  # expand INCLUDEDIR dynamically below
-                         )
+installation_info = dict(
+    libdir='@Readout_BIN2LIB@',
+    includedir='@Readout_BIN2INC@',
+    compdir='@Readout_BIN2DATA@',
+    libname='@Readout_LIBNAME@',
+    version='@Readout_VERSION@',
+    bindir='.',  # by definition, since readout-config is always installed in this directory
+    ldflags='-Wl,-rpath,<LIBDIR> -L<LIBDIR> -l@Readout_LIBNAME@'.strip(),  # expand LIBDIR dynamically below
+    cflags='-I<INCLUDEDIR>',  # expand INCLUDEDIR dynamically below
+    )
+
 
 __version__ = installation_info['version']
 
+
 if installation_info.get('libdir', '@').startswith('@'):
-    raise SystemExit('ERROR: mcpl-config script can only be used after installation via CMake')
+    raise SystemExit('ERROR: readout-config script can only be used after installation via CMake')
 
 
-def hasopt(optname):
-    return installation_info['opt_%s' % optname]
-
-
-_options = list(sorted(e[4:] for e in installation_info.keys() if e.startswith('opt_')))
-_infos_nonoptions = list(sorted(e for e in installation_info.keys() if not e.startswith('opt_')))
+OPTIONS = list(sorted(key[4:] for key in installation_info if key.startswith('opt_')))
+INFO = list(sorted(key for key in installation_info if not key.startswith('opt_')))
 
 
 def lookup_choice(name):
@@ -63,52 +59,18 @@ def lookup_choice(name):
     return p.resolve()
 
 
-def unique_list(seq):
-    seen = set()
-    return [x for x in seq if not (x in seen or seen.add(x))]
-
-
-def modify_path_var(varname, apath, remove=False):
-    """Create new value suitable for an environment path variable (varname can for
-    instance be "PATH", "LD_LIBRARY_PATH", etc.). If remove is False, it will add
-    apath to the front of the list. If remove is True, all references to apath will
-    be removed. In any case, duplicate entries are removed (keeping the first entry).
-    """
-    apath = str(apath.absolute().resolve())
-    others = list(e for e in os.environ.get(varname, '').split(':') if (e and e != apath))
-    return ':'.join(unique_list(others if remove else ([apath]+others)))
-
-
-def print_shell_setup(remove=False):
-    out = []
-
-    def export_quoted(varname, value):
-        return 'export %s' % shell_quote('%s=%s' % (varname, value))
-
-    # Handle path-like variables:
-    def handle_var(varname, dirname):
-        return export_quoted(varname, modify_path_var(varname, lookup_choice(dirname), remove=remove))
-    out.append(handle_var('PATH', 'bindir'))
-    out.append(handle_var('LD_LIBRARY_PATH', 'libdir'))
-    if sys.platform == 'darwin' or lookup_choice('libname').endswith('.dylib'):
-        out.append(handle_var('DYLD_LIBRARY_PATH', 'libdir'))
-    out.append(handle_var('PYTHONPATH', 'pythonpath'))
-    out.append(handle_var('CMAKE_PREFIX_PATH', 'cmakedir'))
-
-    print('\n'.join(out))
-
-
 def print_summary():
-    print('==> MCPL v%s with configuration:\n' % __version__)
-    for opt in _options:
-        print('  %20s : %s' % (opt, 'ON' if installation_info['opt_%s' % opt] else 'OFF'))
-    for info in [e for e in _infos_nonoptions if not e == 'version']:
-        print('  %20s : %s' % (info, lookup_choice(info)))
+    print('==> Readout v%s with configuration:\n' % __version__)
+    max_width = max(len(key) for key in OPTIONS + INFO)
+    for opt in OPTIONS:
+        print(f"{opt:>{max_width}} : {'ON' if installation_info['opt_%s' % opt] else 'OFF'}")
+    for info in [e for e in INFO if not e == 'version']:
+        print(f"{info:>{max_width}} : {lookup_choice(info)}")
     print()
+
 
 def parse_cmdline():
     parser = argparse.ArgumentParser()
-    #TODO: show builtin plugins
 
     parser.add_argument('-v', '--version', action='version', version=__version__,
                         help='show the Readout version number and exit')
@@ -116,16 +78,8 @@ def parse_cmdline():
                         help='show Readout version encoded into single integral number (e.g. v1.3.2 is 10302) and exit')
     parser.add_argument('-s', '--summary', action='store_true',
                         help='print summary information about installation and exit')
-    parser.add_argument('--show', type=str, choices=[e for e in _infos_nonoptions if e not in ['version']],
+    parser.add_argument('--show', type=str, choices=[e for e in INFO if e not in ['version']],
                         help='print requested information about Readout installation and exit')
-    parser.add_argument('--setup', action='store_true',
-                        help="""emit shell code which can be used to setup environment for Readout usage and exit
-                        (type "eval $(%(prog)s --setup)" in a shell to apply to current environment).""")
-    parser.add_argument('--unsetup', action='store_true',
-                        help="""emit shell code which can be used to undo the effect of --setup and exit (type
-                        "eval $(%(prog)s --unsetup)" in a shell to apply to current environment). This might
-                        have unwanted side-effects if the directories of the Readout installation are mixed
-                        up with files from other software packages.""")
 
     args = parser.parse_args()
 
@@ -144,11 +98,7 @@ def main():
     elif args.show:
         print(lookup_choice(args.show))
     elif args.intversion:
-        print(sum(a*b for a, b in zip((int(e) for e in __version__.split('.')), (10000, 100, 1))))
-    elif args.setup:
-        print_shell_setup()
-    elif args.unsetup:
-        print_shell_setup(remove=True)
+        print(sum(a * b for a, b in zip((int(e) for e in __version__.split('.')), (10000, 100, 1))))
     else:
         raise SystemExit('ERROR: Missing choice (should not happen).')
 
