--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-list(APPEND CXX_SOURCES
+list(APPEND LIB_SOURCES
         Readout.cpp
         ReadoutClass.cpp
         enums.cpp
@@ -6,16 +6,16 @@ list(APPEND CXX_SOURCES
         replay.cpp
 )
 
-foreach(CXX_SOURCE IN LISTS CXX_SOURCES)
+foreach(LIB_SOURCE IN LISTS LIB_SOURCES)
     #    message(STATUS "Setting compile options for ${CXX_SOURCE} to ${SOURCE_FILE_COMPILE_OPTIONS}")
-    set_source_files_properties(${CXX_SOURCE} PROPERTIES COMPILE_OPTIONS "${SOURCE_FILE_COMPILE_OPTIONS}")
+    set_source_files_properties(${LIB_SOURCE} PROPERTIES COMPILE_OPTIONS "${SOURCE_FILE_COMPILE_OPTIONS}")
 endforeach()
 
-foreach(CXX_TARGET IN LISTS LIB_TARGETS)
-    target_sources(${CXX_TARGET} PRIVATE ${CXX_SOURCES})
+foreach(LIB_TARGET IN LISTS LIB_TARGETS)
+    target_sources(${LIB_TARGET} PRIVATE ${LIB_SOURCES})
     #target_include_directories(${CXX_TARGET} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
     target_include_directories(
-            ${CXX_TARGET}
+            ${LIB_TARGET}
             PUBLIC
             $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
             $<INSTALL_INTERFACE:>  # <prefix>
