--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install Python-based dependencies
         run: |
-          python -m pip install setuptools_scm conan numpy
+          python -m pip install conan numpy
           echo "pythonInterpreter=`which python`" >> $GITHUB_ENV
 
       - name: Cache conan setup
