--- a/cmake/readout_config.h.in
+++ b/cmake/readout_config.h.in
@@ -10,7 +10,7 @@ namespace libreadout::config {
     //! \brief Configuration information for the library name
     auto constexpr libname = "@Readout_LIBNAME@";
     //! \brief Configuration information for the version
-    auto constexpr version = "@Readout_VERSION@";
+    auto constexpr version = "@READOUT_VERSION@";
     //! \brief Configuration information for the binary directory location
     auto constexpr bindir = ".";
     //! \brief Configuration information for the linker flags <LIBDIR> expanded at runtime
