--- a/src/replay/CMakeLists.txt
+++ b/src/replay/CMakeLists.txt
@@ -9,5 +9,5 @@ endforeach()
 
 foreach(BIN_TARGET IN LISTS BIN_TARGETS)
     target_sources(${BIN_TARGET} PRIVATE ${BIN_SOURCES})
-    target_include_directories(${BIN_TARGET} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+    target_include_directories(${BIN_TARGET} PRIVATE ${CMAKE_CURRENT_LIST_DIR} ${ARGS_INCLUDE_DIR})
 endforeach()
