--- a/src/replay/CMakeLists.txt
+++ b/src/replay/CMakeLists.txt
@@ -11,3 +11,8 @@ foreach(BIN_TARGET IN LISTS BIN_TARGETS)
     target_sources(${BIN_TARGET} PRIVATE ${BIN_SOURCES})
     target_include_directories(${BIN_TARGET} PRIVATE ${CMAKE_CURRENT_LIST_DIR} ${ARGS_INCLUDE_DIR})
 endforeach()
+
+
+if (READOUT_TESTS)
+    add_test(NAME replay_binary_test COMMAND ${READOUT_REPLAY_BINARY} --help)
+endif()
